# music-naming-and-tagging-dev

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: run.yml
src/music_naming_and_tagging/: drive_retagger.py  main.py  original_retagger.py  renamer.py  retagger.py  retagger_api.py  retagger_music_tag.py  retagger_types.py
tests/music_naming_and_tagging/: test_import_common_utils.py  test_renamer.py
