[tool.poetry]
name = "music_naming_and_tagging"
version = "0.0.29"
description = "Pluggable drivers for identifying audio files and filling music metadata"
authors = ["Kaiano Levine"]
license = "MIT"
readme = "README.md"
packages = [{ include = "music_naming_and_tagging", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
kaiano-common-utils = { git = "https://github.com/kaianolevine/kaiano-common-utils.git", branch = "main" }
music-tag = "^0.4.3"
pyacoustid = "^1.2.2"
musicbrainzngs = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["project_name"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.isort]
profile = "black"
line_length = 88